Change solution structure
Change the solution structure. Root namespace is Mips instead of MipsEmulator.

--- a/Mips/Properties/launchSettings.json
+++ b/Mips/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MipsEmulator": {
+    "Mips": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
