--- a/Mips.UnitTest/Mips.UnitTest.csproj
+++ b/Mips.UnitTest/Mips.UnitTest.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>Mips.UnitTest</AssemblyName>
+
+    <RootNamespace>Mips.UnitTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MipsEmulator\MipsEmulator.csproj" />
+    <ProjectReference Include="..\Mips\Mips.csproj" />
   </ItemGroup>
 
 </Project>
