--- a/Mips/Mips.csproj
+++ b/Mips/Mips.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <AssemblyName>Mips</AssemblyName>
+    <RootNamespace>Mips</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
