--- a/emulator/unit-test/Mips.Emulator.UnitTest.csproj
+++ b/emulator/unit-test/Mips.Emulator.UnitTest.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mips\Mips.csproj" />
+    <ProjectReference Include="..\src\Mips.Emulator.csproj" />
   </ItemGroup>
 
 </Project>
