--- a/emulator/component-test/Mips.Emulator.ComponentTest.csproj
+++ b/emulator/component-test/Mips.Emulator.ComponentTest.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Mips\Mips.csproj" />
+    <ProjectReference Include="..\src\Mips.Emulator.csproj" />
   </ItemGroup>
 
 </Project>
