--- a/assembler/src/Mips.Assembler.csproj
+++ b/assembler/src/Mips.Assembler.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\emulator\src\Mips.Emulator.csproj" />
+  </ItemGroup>
+
 </Project>
